# mythings-core

./: .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-06.jsonl  2026-07-07.jsonl  2026-07-08.jsonl  2026-07-09.jsonl  2026-07-12.jsonl  5c1bd1b5.jsonl  s0-bootstrap.jsonl
docs/: ARCHITECTURE.md  CLAUDE.template.md  CONVENTIONS.md  PROVENANCE.md
docs/adr/: 0001-corpus-seam.md  0004-plan-seam.md
docs/tools/: BUILD_GUIDE.md  README.md  my-advisor.md  my-archivist.md  my-changelogger.md  my-conductor.md  my-dashboard.md  my-describer.md  my-director.md  my-docs.md  my-drift-watcher.md  my-equations.md  my-figure.md  my-grapher.md  my-groomer.md  my-guide.md  my-idea.md  my-image-processor.md  my-knowledger.md  my-librarian.md  my-manim-editor.md  my-news.md  my-orchestrator.md  my-pipeline.md  my-planner.md  my-presentation.md  my-professor.md  my-projector.md  my-reporter.md  my-researcher.md  my-reviewer.md  my-scaffolder.md  my-scraper.md  my-searcher.md  my-security.md  my-site.md  my-syndicator.md  my-tables.md  my-telegram-bot.md  my-tester.md  (+5 more)
src/mythings/: __init__.py  _devledger.py  _harness.py  _manifest.py  _secrets.py  corpus.py  engine.py  fetch.py  github.py  harness.md  plan.py  policy.py  selection.py  service-harness.md  (+3 more)
tests/: conftest.py  test__secrets.py  test_corpus.py  test_devledger.py  test_engine.py  test_fetch.py  test_github.py  test_harness.py  test_plan.py  test_policy.py  test_selection.py  test_testers.py  test_testing.py  test_tools_docs.py  test_tools_manifest.py
