[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-things-core"
version = "0.0.1"
description = "Core SDK for the MyThingsLab autonomous dev-harness tool line (My[X])."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
# Core is deliberately dependency-free: it shells out to `gh`/`git` rather than
# pulling PyGithub/GitPython, so every My[X] tool inherits a tiny footprint.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[tool.hatch.build.targets.wheel]
packages = ["src/mythings"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
